date range filter

--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -2,6 +2,7 @@
   font-family: 'Open Sans', sans-serif;
 
   .filter-box__header {
+    cursor: pointer;
     border-radius: 6px 6px 0 0;
     background-color: #EEF1F7;
     height: 40px;
