--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,53 +1,72 @@
+@import "./_input.scss";
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 table {
   font-family: 'Open Sans', sans-serif;
-  border: 1px solid #D6DAE3;
-  border-radius: 6px;
-  overflow: hidden;
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0;
   width: 100%;
-  thead {
-    background-color: #EEF1F7;
-    font-size: 12px;
-    td {
-      color: #49587D;
-      text-transform: uppercase;
-    }
-  }
-
-  tbody {
-    font-size: 12px;
-    background-color: #fff;
-    td {
-      color: #6B7891;
-    }
-  }
-
-  td {
-    padding: 12px;
-    border: 1px solid #D6DAE3;
-  }
+}
+table tr th,
+table tr td {
+  border-right: 1px solid #D6DAE3;
+  border-bottom: 1px solid #D6DAE3;
+  padding: 5px;
+  font-size: 12px;
+}
+table tr th:first-child,
+table tr td:first-child {
+  border-left: 1px solid #D6DAE3;
 }
 
-input, select {
-  height: 33px;
-  width: 247px;
-  border: 1px solid #CCD0D8;
-  border-radius: 4px;
-  background-color: #FCFDFE;
-  transition: all 0.2s ease;
-  font-size: 14px;
-  color: #465880;
+table tbody {
+  background-color: #fff;
+}
 
-  &:focus {
-    outline: 0;
-    transition: all 0.2s ease;
-    border-color: #49587D;
+table tbody tr:hover {
+  background-color: #EEF1F7;
+}
+
+table tr td {
+  color: #6B7891;
+  padding: 12px;
+  &.clickable {
+    color: #0070D9;
+    cursor: pointer;
   }
 }
-
-input {
-  padding: 0 15px;
+table tr th {
+  background: #EEF1F7;
+  border-top: 1px solid #D6DAE3;
+  color: #49587D;
+  text-transform: uppercase;
+  text-align: left;
+  padding: 12px;
 }
+
+/* top-left border-radius */
+table tr:first-child th:first-child {
+  border-top-left-radius: 6px;
+}
+
+/* top-right border-radius */
+table tr:first-child th:last-child {
+  border-top-right-radius: 6px;
+}
+
+/* bottom-left border-radius */
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 6px;
+}
+
+/* bottom-right border-radius */
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 6px;
+}
+
 
 label {
   display: block;
@@ -55,4 +74,13 @@ label {
   color: #6B7891;
   font-size: 14px;
   margin-bottom: 6px;
+}
+
+
+.form-group:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.form-group button:not(:last-child) {
+  margin-right: 20px;
 }
