--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -2,7 +2,7 @@
   text-align: center;
   height: 2em;
   max-width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   right: 0;
   bottom: 3em;
