--- a/src/sass/order-detail.scss
+++ b/src/sass/order-detail.scss
@@ -14,3 +14,11 @@
   padding: 20px;
   display: flex;
 }
+
+.MapWrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
