--- a/src/components/ModalBox/index.scss
+++ b/src/components/ModalBox/index.scss
@@ -15,7 +15,7 @@
     background: #fff;
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.5);
     min-height: 140px;
-    width: 46%;
+    width: 660px;
     font-family: "Open Sans", sans-serif;
     box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.24);
 
