--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,18 +1,20 @@
 .navbar {
   * {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
 
   position: fixed;
   top: 0;
-  left: 0;
+  // left: 0;
 	height: 62px;
   z-index: 2;
 	width: 100%;
+  max-width: 1440px;
   font-size: 0;
   padding: 15px 20px;
-	background-color: #364760;
-	box-shadow: 1px 1px 5px 0 rgba(140,140,140,0.5);
+	background-color: #a2172a;
+	box-shadow: 1px 1px 5px 0 rgba(21, 19, 19, 0.9);
+  // background-image: url("https://www.transparenttextures.com/patterns/az-subtle.png");
 
   .col {
     font-size: 16px;
@@ -21,15 +23,26 @@
   }
 
   .navbar-brand {
-    width: 23%;
+    width: 10%;
     h4 {
       color: #fff;
       font-weight: 600;
+      font-family: 'Montserrat', sans-serif;
+      letter-spacing: 1px;
+      font-size: 20px;
+      span {
+        &:first-child {
+          font-weight: 400;
+        }
+        &:last-child {
+          font-weight: 700;
+        }
+      }
     }
   }
 
   .menu-items {
-    width: 50%;
+    width: 80%;
     a {
       cursor: pointer;
       height: 32px;
@@ -41,7 +54,7 @@
       color: #fff;
       transition: background 0.2s ease;
       &.active, &:hover {
-        color: #364760;
+        color: #3e3e40;
         background-color: #fff;
         // font-weight: 400;
         transition: background 0.2s ease;
@@ -50,6 +63,7 @@
     }
     .menu-items-inner {
       display: flex;
+      visibility: hidden;
       justify-content: space-between;
     }
   }
@@ -57,7 +71,7 @@
   .logout {
     cursor: pointer;
     text-align: right;
-    width: 27%;
+    width: 10%;
     font-size: 14px;
     span:first-child {
       vertical-align: middle;
