--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -27,7 +27,7 @@
     transform: translateX(22px);
   }
   input:checked ~ .bg {
-    background-color: #006FE1;
+    background-color: #71c5c2;
   }
   .bg {
     position: absolute;
