--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -15,24 +15,41 @@
     outline: 0;
   }
 
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+
   &.btn-primary {
-    border-color: #0070D9;
-    background-color: #0070D9;
+    border-color: #3e3e40;
+    background-color: #3e3e40;
     color: #fff;
     &:hover {
       transition: all 0.2s ease;
-      background-color: darken(#0070D9, 5%);
+      background-color: darken(#2f2f31, 5%);
     }
   }
 
   &.btn-secondary {
     background-color: #fff;
-    border-color: #0070D9;
-    color: #0070D9;
+    border-color: #3e3e40;
+    color: #3e3e40;
     &:hover {
       transition: all 0.2s ease;
-      border-color: #0070D9;
-      background-color: #0070D9;
+      border-color: #3e3e40;
+      background-color: #3e3e40;
+      color: #fff;
+    }
+  }
+
+  &.btn-danger {
+    background-color: #fff;
+    border-color: #a2172a;
+    color: #a2172a;
+    &:hover {
+      transition: all 0.2s ease;
+      border-color: #a2172a;
+      background-color: #a2172a;
       color: #fff;
     }
   }
