--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -153,7 +153,7 @@
   -webkit-box-shadow: none;
           box-shadow: none;
   cursor: pointer;
-  color: #4A90E2;
+  color: #3e3e40;
   font-size: 0.875em;
 }
 
@@ -187,7 +187,7 @@
 
 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
   color: #FFF;
-  background-color: #4A90E2;
+  background-color: #3e3e40;
 }
 
 /* DayPickerInput */
