--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -2,6 +2,19 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  background-color: #fbfbfb;
+}
+
+.login-wrap {
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    // background: rgba(0,0,0,0.3);
+  }
 }
 
 table {
