updated dry days ui, jurisdictions etc.

--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -125,6 +125,10 @@
   }
 }
 
+.dry-day-calendar .DayPicker-Day {
+  padding: 1rem;
+}
+
 .DayPicker-WeekNumber {
   display: table-cell;
   padding: .5rem;
