--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,11 +1,11 @@
 .btn {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 11px;
   font-weight: 600;
   text-align: center;
-  height: 33px;
   border: 1px solid;
-  border-radius: 3px;
+  border-radius: 0px;
+  line-height: 38px;
   padding: 0 30px;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -21,8 +21,8 @@
   }
 
   &.btn-primary {
-    border-color: #3e3e40;
-    background-color: #3e3e40;
+    border-color: #3d70b2;
+    background-color: #3d70b2;
     color: #fff;
     &:hover {
       transition: all 0.2s ease;
@@ -32,12 +32,12 @@
 
   &.btn-secondary {
     background-color: #fff;
-    border-color: #3e3e40;
+    border-color: #5a6872;
     color: #3e3e40;
     &:hover {
       transition: all 0.2s ease;
-      border-color: #3e3e40;
-      background-color: #3e3e40;
+      border-color: #5a6872;
+      background-color: #5a6872;
       color: #fff;
     }
   }
