--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans');
 .dialog--container {
   * {
     box-sizing: border-box;
@@ -12,15 +11,6 @@
   border-right: 5px solid #dfdfdf;
 }
 
-.dialog--title-bar {
-  // p {
-  //   font-size: 14px;
-  //   font-weight: 600;
-  //   line-height: 1.25;
-  //   color: #152935;
-  // }
-}
-
 .dialog--body {
   position: relative;
   padding: 45px;
@@ -29,6 +19,16 @@
     font-size: 16px;
     line-height: 1.25;
     color: #152935;
+  }
+  .dialog--title-bar {
+    p {
+      font-weight: 400;
+      margin: 0;
+      font-size: 26px;
+      line-height: 1.27;
+      color: #152935;
+    }
+    margin-bottom: 30px;
   }
 }
 
