--- a/src/components/sidemenu/sidemenu.scss
+++ b/src/components/sidemenu/sidemenu.scss
@@ -1,26 +1,27 @@
 .side-menu {
   position: relative;
-  top: 62px;
-  left: 0;
   width: 240px;
   height: calc(100vh - 62px);
-  background: #a2172a;
   // border-right: 1px solid #D6DAE3;
-  box-shadow: 0px 0px 4px 1px rgba(21, 19, 19, 0.9);
+  border: 1px solid #dfdfdf;
   .side-menu__item {
     width: 100%;
-    background-color: #a2172a;
+    display: flex;
+
     a {
-      font-size: 14px;
-      font-family: 'Montserrat', sans-serif;
+      font-size: 16px;
+      font-family: 'IBM Plex Sans', sans-serif;
       display: block;
-      padding: 15px 20px;
+      padding: 12px 20px;
       width: 100%;
       text-decoration: none;
-      color: #fff;
+      color: #333;
+      svg {
+        margin-right: 20px;
+      }
     }
     &.active, &:hover {
-      background-color: #fff;
+      background-color: #dfdfdf;
       a {
         color: #333;
       }
