--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,84 +1,62 @@
-.navbar {
-  * {
-    font-family: 'Montserrat', sans-serif;
-  }
+.header {
+  font-family: 'IBM Plex Sans', sans-serif;
+  width: 100%;
 
-  position: fixed;
-  top: 0;
-  // left: 0;
-	height: 62px;
-  z-index: 2;
-	width: 100%;
-  max-width: 1440px;
-  font-size: 0;
-  padding: 15px 20px;
-	background-color: #a2172a;
-	box-shadow: 1px 1px 5px 0 rgba(21, 19, 19, 0.9);
-  // background-image: url("https://www.transparenttextures.com/patterns/az-subtle.png");
-
-  .col {
-    font-size: 16px;
-    display: inline-block;
-    vertical-align: middle;
-  }
-
-  .navbar-brand {
-    width: 10%;
-    h4 {
+  .upper {
+    background-color: #0f212e;
+    height: 36px;
+    p {
       color: #fff;
-      font-weight: 600;
-      font-family: 'Montserrat', sans-serif;
-      letter-spacing: 1px;
-      font-size: 20px;
-      span {
-        &:first-child {
-          font-weight: 400;
-        }
-        &:last-child {
-          font-weight: 700;
-        }
-      }
+      font-weight: bold;
+      font-size: 11px;
+      float: right;
+      position: relative;
+      top: 11px;
+      padding: 0 22px;
     }
   }
-
-  .menu-items {
-    width: 80%;
-    a {
-      cursor: pointer;
-      height: 32px;
-      line-height: 32px;
-      font-size: 14px;
-      // font-weight: 300;
-      padding: 0 30px;
-      border-radius: 32px;
-      color: #fff;
-      transition: background 0.2s ease;
-      &.active, &:hover {
-        color: #3e3e40;
-        background-color: #fff;
-        // font-weight: 400;
-        transition: background 0.2s ease;
-      }
-      text-decoration: none;
-    }
-    .menu-items-inner {
-      display: flex;
-      visibility: hidden;
-      justify-content: space-between;
-    }
+  .lower {
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    padding: 12px 22px;
+    background-color: #152934;
   }
 
-  .logout {
-    cursor: pointer;
-    text-align: right;
-    width: 10%;
-    font-size: 14px;
-    span:first-child {
+  .brand {
+    svg {
       vertical-align: middle;
     }
-    span:last-child {
+    .brand--name {
+      margin-left: 15px;
+      line-height: 1;
+      display: inline-block;
+      vertical-align: middle;
       color: #fff;
-      margin-left: 8px;
+      font-size: 18px;
+      span {
+        font-size: 13px;
+      }
     }
   }
+}
+
+.header--items {
+  display: flex;
+  align-items: center;
+ .item {
+   svg {
+     vertical-align: middle;
+   }
+   span {
+     letter-spacing: 0.5px;
+     vertical-align: middle;
+     font-size: 14px;
+     color: #fff;
+     margin-left: 10px;
+   }
+ }
+ .item:not(:last-child) {
+   margin-right: 58px;
+ }
 }
