--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -1,6 +1,6 @@
 .toggle {
-  width: 42px;
-  height: 22px;
+  width: 36px;
+  height: 18px;
   position: relative;
   display: inline-block;
   vertical-align: middle;
@@ -17,17 +17,17 @@
     position: absolute;
     left: 2px;
     top: 3px;
-    width: 16px;
-    height: 16px;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
     background: #fff;
     transition: all 0.5s cubic-bezier(.25,.8,.25,1);
   }
   input:checked ~ .toggle-switch {
-    transform: translateX(22px);
+    transform: translateX(20px);
   }
   input:checked ~ .bg {
-    background-color: #71c5c2;
+    background-color: #3d70b2;
   }
   .bg {
     position: absolute;
