--- a/src/home/components/ottp-detail/ottp-detail.scss
+++ b/src/home/components/ottp-detail/ottp-detail.scss
@@ -6,12 +6,13 @@
   h4 {
     color: #4a90e2;
     font-size: 16px;
+    font-weight: 600;
     margin-bottom: 8px;
   }
 
   .label {
     font-size: 13px;
-    color: #4a4a4a;
+    color: #4a90e2;
   }
 
   .value {
@@ -19,9 +20,21 @@
     font-size: 14px;
   }
 
+  table {
+    border: 1px solid #dfe3e6;
+  }
+
   table tr td {
     pointer-events: none;
-    border-right: 0;
+    border: none;
+  }
+
+  table thead tr td {
+    font-weight: 600;
+  }
+
+  table tbody tr:nth-child(odd) {
+    background-color: #ecf1f8;
   }
 
   table tr td:first-child {
@@ -33,7 +46,7 @@
   }
 
   table tr:last-child td {
-    border-bottom: 0;
+    border: none;
   }
 }
 
