--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -76,7 +76,7 @@ table tr th {
   background: #EEF1F7;
   border-top: 1px solid #D6DAE3;
   color: #152935;
-  text-transform: uppercase;
+  //text-transform: uppercase;
   text-align: left;
   padding: 12px;
 }
