--- a/src/components/filterModal/index.scss
+++ b/src/components/filterModal/index.scss
@@ -7,12 +7,14 @@
   //transition: all 0.2s ease;
 
   &.show {
-    opacity: 1;
+    //opacity: 1;
+    display: block;
     transition: all 0.2s ease
   }
 
   &.hide {
-    opacity: 0;
+    //opacity: 0;
+    display: none;
     transition: all 0.2s ease;
   }
 
