--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,8 +5,10 @@
   .upper {
     background-color: #0f212e;
     height: 36px;
+ 
     p {
       color: #fff;
+      cursor: pointer;
       font-weight: bold;
       font-size: 11px;
       float: right;
