--- a/src/home/components/support/support.scss
+++ b/src/home/components/support/support.scss
@@ -127,3 +127,16 @@
     text-decoration: underline;
   }
 }
+
+// @media only screen and (max-width: 411px) {
+//   #support {
+//     &.container .main-header {
+//       padding: 10% 20%;
+//     }
+
+//     &.container .body {
+//       width: 100%;
+//       height: calc(100vh - 50px);
+//     }
+//   }
+// }
