--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -11,7 +11,8 @@
   border-right: 5px solid #dfdfdf;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .dialog--body {
