--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,8 +8,12 @@
   width: 200px;
   max-width: 200px;
   padding: 10px 15px;
-  // opacity: 0;
-  // transition: all ease-in .6s;
+  z-index: 1;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.29;
+  letter-spacing: normal;
+  color: #152934;
 }
 
 .info:hover .tooltip-text {
