Special restriction in rule engine

--- a/src/home/components/rule-engine/rule-engine.scss
+++ b/src/home/components/rule-engine/rule-engine.scss
@@ -68,7 +68,7 @@
   }
 
   td:last-child {
-    text-align: right;
+    //text-align: right;
     width: 30%;
     svg:first-child {
       cursor: pointer;
