--- a/src/home/components/support/support.scss
+++ b/src/home/components/support/support.scss
@@ -1,142 +1,39 @@
-// * {
-//   margin: 0;
-//   font-family: "Montserrat", sans-serif;
-//   box-sizing: border-box;
-// }
 #support {
-  &.container .main-header {
-    background: #152935;
-    font-size: 12px;
-    font-weight: 500;
-    font-style: italic;
-    letter-spacing: -0.2px;
-    color: #ffffff;
-    padding: 18px 33px;
-  }
-
-  &.container .body {
-    width: 100%;
-    height: calc(100vh - 50px);
-  }
-
-  .title {
-    font-size: 18px;
-    font-weight: 500;
-    letter-spacing: -0.3px;
-    color: #000000;
-  }
-
-  .sub-title {
-    font-size: 12px;
-    font-weight: 500;
-    letter-spacing: -0.2px;
-    color: #3d70b2;
-  }
-
-  .body .header {
-    padding: 14px 33px;
-  }
-
-  .body .content {
-    padding: 14px 33px;
-    background: #f9f9f9;
-  }
-
-  label {
-    font-size: 15px;
-    letter-spacing: -0.3px;
-    color: #000000;
-    margin-bottom: 10px;
-  }
-
-  .form-group {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  select {
+  max-height: 312px;
+  .body {
     background: #fff;
-    padding: 12px 9px;
-    font-size: 15px;
-    line-height: 1.2;
-    color: #5f5f6e;
-  }
+    padding: 30px 0;
+    margin-top: 70px;
+   
+    .title-text {
+      font-size: 24px;
+      line-height: 0.75;
+      text-align: center;
+    }
 
-  select:required:invalid {
-    color: gray;
-  }
+    .content {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      margin-top: 53px;
+      margin-bottom: 28px;
+      p {
+        border-bottom: 1px solid #000;
+      }
+    }
 
-  option[value=""][disabled] {
-    display: none;
-  }
-  option {
-    color: black;
-  }
-
-  button {
-    text-align: center;
-    padding: 10px 10px;
-    background-color: #3d70b2;
-    border: 1px solid;
-    border-radius: 0px;
-    cursor: pointer;
-    font-size: 15px;
-    line-height: 1;
-    letter-spacing: 0.5px;
-    text-align: center;
-    color: #ffffff;
-    width: 90px;
-  }
-
-  textarea {
-    padding: 8px;
-    height: 112px;
-    width: 100%;
-    border: 1px solid #c2c2c2;
-  }
-
-  :focus {
-    outline: 0;
-  }
-
-  .footer{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: 20px 50px;
-  }
-
-  .footer div:first-child {
-    margin-top: 40px;
-    margin-bottom: 10px;
-  }
-
-  .footer .text {
-    font-size: 15px;
-    letter-spacing: -0.3px;
-    color: #000000;
-  }
-
-  .footer .ottp-id {
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 1.25;
-    text-align: center;
-    color: #4a90e2;
-    text-decoration: underline;
+    .footer {
+      p {
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+      }
+      .title {
+        color: #4a90e2;
+      }
+      .footer-text {
+        color: #000;
+      }
+    }
   }
 }
-
-// @media only screen and (max-width: 411px) {
-//   #support {
-//     &.container .main-header {
-//       padding: 10% 20%;
-//     }
-
-//     &.container .body {
-//       width: 100%;
-//       height: calc(100vh - 50px);
-//     }
-//   }
-// }
