--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -71,6 +71,24 @@ input[type='text'], input[type='password'], input[type='number'] {
   }
 }
 
+input[type='date'] {
+  width: 225px;
+  height: 40px;
+  background-color: rgba(61, 112, 178, 0.1);
+  border: 0;
+  padding: 10px 10px 10px 30px;
+  color: #222;
+  font-size: 14px;
+  &:focus {
+    outline: 0;
+  }
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator:hover {
+  //background: transparent;
+  cursor: pointer;
+}
+
 input.error {
   border: 1px solid #d0021b;
 }
