--- a/src/home/components/support/support.scss
+++ b/src/home/components/support/support.scss
@@ -14,6 +14,7 @@
     .content {
       display: flex;
       justify-content: space-around;
+      text-align: center;
       align-items: center;
       margin-top: 53px;
       margin-bottom: 28px;
