--- a/src/home/components/complaints/complaints.scss
+++ b/src/home/components/complaints/complaints.scss
@@ -53,6 +53,10 @@
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+
+    p {
+      font-size: 12px;
+    }
   }
 
   select {
