--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -71,6 +71,10 @@ input[type='text'], input[type='password'], input[type='number'] {
   }
 }
 
+textarea {
+  background-color: rgba(61, 112, 178, 0.1);
+}
+
 input[type='date'] {
   width: 225px;
   height: 40px;
