--- a/src/components/filterModal/index.scss
+++ b/src/components/filterModal/index.scss
@@ -1,8 +1,8 @@
 .filter-container {
   background-color: #e6ebf2;
   position: absolute;
-  top: 40px;
-  right: 0px;
+  // top: 40px;
+  // right: 0px;
   padding: 15px 38px  15px 17px;
   z-index: 1;
   //transition: all 0.2s ease;
