--- a/src/home/components/supportWithForm/supportWithForm.scss
+++ b/src/home/components/supportWithForm/supportWithForm.scss
@@ -32,17 +32,9 @@
         border-bottom: 1px solid #000;
       }
 
-      // .submit {
-      //   margin-bottom: 20px;
-      // }
-
       .footer {
         margin-top: 40px;
-        // p {
-        //   font-size: 18px;
-        //   line-height: 1.5;
-        //   text-align: center;
-        // }
+        font-size: 18px;
         .title {
           color: #4a90e2;
         }
