--- a/src/home/components/supportWithoutForm/supportWithoutForm.scss
+++ b/src/home/components/supportWithoutForm/supportWithoutForm.scss
@@ -19,6 +19,7 @@
       margin-top: 53px;
       margin-bottom: 28px;
       p {
+        font-size: 24px;
         border-bottom: 1px solid #000;
       }
     }
