--- a/src/home/components/overview/overview.scss
+++ b/src/home/components/overview/overview.scss
@@ -14,6 +14,7 @@
         font-size: 18px;
         padding: 23px 0;
         border-top: 1px solid #dfe3e6;
+        cursor: pointer;
       }
     
       a {
