--- a/src/home/components/rule-engine/rule-engine.scss
+++ b/src/home/components/rule-engine/rule-engine.scss
@@ -5,7 +5,7 @@
   }
 
   .label {
-    margin-bottom: 11px;
+    margin-bottom:7px;
   }
   p {
     color: #152935;
@@ -19,6 +19,10 @@
   input.small {
     width: 90px;
   }
+
+  // input {
+  //   margin-bottom: 10px;
+  // }
 
   .possession {
     max-width: 225px;
