--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -1,47 +1,55 @@
-.dialog--container {
-  * {
-    box-sizing: border-box;
+.overlay-container {
+  top: 0;
+  left: 0;
+  height: 100%;
+  position: fixed;
+  width: 100%;
+  z-index: 5003;
+  background: rgba(0, 0, 0, 0.7);
+  .dialog--container {
+    * {
+      box-sizing: border-box;
+    }
+    font-family: 'IBM Plex Sans', sans-serif;
+    max-width: 500px;
+    background-color: #fff;
+    position: absolute;
+    border: 1px solid #9b9b9b;
+    border-top: 5px solid #3d70b2;
+    border-right: 5px solid #dfdfdf;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
   }
-  font-family: 'IBM Plex Sans', sans-serif;
-  max-width: 500px;
-  background-color: #fff;
-  position: absolute;
-  border: 1px solid #9b9b9b;
-  border-top: 5px solid #3d70b2;
-  border-right: 5px solid #dfdfdf;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-}
-
-.dialog--body {
-  position: relative;
-  padding: 45px;
-  p {
-    margin: 0;
-    font-size: 16px;
-    line-height: 1.25;
-    color: #152935;
-  }
-  .dialog--title-bar {
+  
+  .dialog--body {
+    position: relative;
+    padding: 45px;
     p {
-      font-weight: 400;
       margin: 0;
-      font-size: 26px;
-      line-height: 1.27;
+      font-size: 16px;
+      line-height: 1.25;
       color: #152935;
     }
-    margin-bottom: 30px;
+    .dialog--title-bar {
+      p {
+        font-weight: 400;
+        margin: 0;
+        font-size: 26px;
+        line-height: 1.27;
+        color: #152935;
+      }
+      margin-bottom: 30px;
+    }
   }
+  
+  .dialog--footer {
+    // position: absolute;
+    bottom: 0;
+    background-color: #dfe6eb;
+    width: 100%;
+    height: 92px;
+    padding: 26px 20px;
+  }  
 }
-
-.dialog--footer {
-  // position: absolute;
-  bottom: 0;
-  background-color: #dfe6eb;
-  width: 100%;
-  height: 92px;
-  padding: 26px 20px;
-}
-
