--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -28,5 +28,5 @@
   left: 95px;
   border-width: 5px;
   border-style: solid;
-  border-color: transparent transparent #333 transparent;
+  border-color: transparent transparent #fff transparent;
 }
