--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,28 +5,38 @@ body {
   background-color: #fbfbfb;
 }
 
-
 table {
   font-family: 'Open Sans', sans-serif;
   border-collapse: separate;
   border-spacing: 0;
   width: 100%;
 }
+
 table tr th,
 table tr td {
-  border-right: 1px solid #D6DAE3;
+  //border-right: 1px solid #D6DAE3;
   border-bottom: 1px solid #D6DAE3;
   padding: 5px;
   font-size: 12px;
   // transition: 1s all ease-in;
 }
+
 table tr th:first-child,
 table tr td:first-child {
   border-left: 1px solid #D6DAE3;
 }
 
+table tr th:last-child,
+table tr td:last-child {
+  border-right: 1px solid #D6DAE3;
+}
+
 table tbody {
   background-color: #fff;
+}
+
+table.logs tbody tr:nth-child(even) {
+  background-color: #f5f7fa;
 }
 
 table tbody tr.clickable:hover {
