--- a/src/home/components/supportWithForm/supportWithForm.scss
+++ b/src/home/components/supportWithForm/supportWithForm.scss
@@ -2,12 +2,15 @@
   .main-container {
     display: flex;
     margin-top: 40px;
+    justify-content: space-between;
 
     .ticket-form {
       width: 60%;
       padding: 21px 30px;
       background: #fff;
-      max-width: 705px;
+      //max-width: 705px;
+      min-width: 620px;
+      max-width: 700px;
     }
 
     .contact-details {
