--- a/src/components/label/label.scss
+++ b/src/components/label/label.scss
@@ -4,6 +4,7 @@
   font-weight: 500;
   color: #152935;
   margin-right: 5px;
+  margin-bottom: 5px;
   svg {
     position: relative;
     top: 7px;
