--- a/src/home/components/supportWithForm/supportWithForm.scss
+++ b/src/home/components/supportWithForm/supportWithForm.scss
@@ -24,6 +24,7 @@
       
       p {
         font-size: 18px;
+        margin-top: 10px;
       }
       
       .icon {
@@ -41,9 +42,11 @@
         .title {
           color: #4a90e2;
           font-weight: 600;
+          margin-top: 0px;
         }
         .text {
           color: #000;
+          margin-top: 0px;
         }
       }
     }
