Added support form validation

--- a/src/components/form-inputs/form-input.scss
+++ b/src/components/form-inputs/form-input.scss
@@ -1,4 +1,4 @@
-input[type='text'] {
+input[type='text'], input[type='email'] {
   width: 225px;
   height: 40px;
   background-color: rgba(61, 112, 178, 0.1);
