--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -68,7 +68,7 @@ table tr td {
   }
 }
 
-input[type='text'], input[type='password'], input[type='number'] {
+input[type='text'], input[type='password'], input[type='number'], input[type='email'] {
   width: 225px;
   height: 40px;
   background-color: rgba(61, 112, 178, 0.1);
