--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -40,7 +40,30 @@
         line-height: 1.27;
         color: #152935;
       }
+      // margin-bottom: 30px;
+    }
+    .dialog--subtitle-bar {
+      p {
+        font-weight: 400;
+        margin: 0;
+        font-size: 16px;
+        line-height: 1.27;
+        color: #152935;
+      }
+      margin-top: 10px;
+    }
+    .header {
       margin-bottom: 30px;
+      display: flex;
+      align-items: baseline;
+
+      .column1 {
+        width: 5%;
+      }
+
+      .column2 {
+        width: 95%;
+      }
     }
   }
   
