--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -61,6 +61,10 @@
         width: 5%;
       }
 
+      .column2.icon {
+        width: 100%;
+      }
+
       .column2 {
         width: 95%;
       }
