--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -104,7 +104,7 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
 }
 
 input.error {
-  border: 1px solid #d0021b;
+  border: 1px solid #d0021b !important;
 }
 
 
