--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -12,6 +12,7 @@
     }
     font-family: 'IBM Plex Sans', sans-serif;
     max-width: 500px;
+    width: 500px;
     background-color: #fff;
     position: absolute;
     border: 1px solid #9b9b9b;
