--- a/src/home/components/rule-engine/rule-engine.scss
+++ b/src/home/components/rule-engine/rule-engine.scss
@@ -31,7 +31,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin: 20px 0;
+      margin-bottom: 20px;
 
       .button-group {
         display: flex;
